--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "backend": "file:..",
     "persist-store": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
