--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "axios": "^1.9.0",
     "backend": "file:..",
     "persist-store": "^3.0.2",
@@ -21,6 +23,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "redux-persist": "^6.0.0",
+    "rollup": "^4.44.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
